--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,9 @@
   const app = initializeApp(firebaseConfig);
 </script>
 
-
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+</script>
 
   <script>
     // The value below is injected by flutter build, do not touch.
