--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-analytics.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-messaging.js"></script>
 
   <script type="module">
   // Import the functions you need from the SDKs you need
@@ -62,6 +63,17 @@
 
   <script type="text/javascript">
     window.flutterWebRenderer = "html";
+</script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDl-_JOy_bj4MyQhYbKbGkZ0sfpbTZDNU"></script>
+
+  <script>
+if ("serviceWorker" in navigator) {
+  window.addEventListener("load", function () {
+    // navigator.serviceWorker.register("/flutter_service_worker.js");
+    navigator.serviceWorker.register("/firebase-messaging-sw.js");
+  });
+}
 </script>
 
   <script>
