--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-analytics.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-messaging.js"></script>
-
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-storage.js"></script>
   <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
