--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,7 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>resvago_customer</title>
+  <script src="https://www.paypal.com/sdk/js?client-id=Ab5v6E4R-gNbD13BbcdgpzK0G66oJ8ij1Va8i85qzGTtgA4TXkmt2h4oRpCXGRTBQs8Fn1SMqgyVkQ19"></script>
   <link rel="manifest" href="manifest.json">
 
 
